Integrate route priorization
