# src/app/core/services/model/initialRoutePrioritizationRequest.ts
@@ -1,0 +1,16 @@
+/**
+ * Mi API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface InitialRoutePrioritizationRequest { 
+    semana?: string | null;
+    familyIds?: Array<number> | null;
+}
+
