# src/app/core/services/model/models.ts
@@ -28,6 +28,7 @@ export * from './historicoRutaDto';
 export * from './historicoRutaDtoIEnumerableDataResponse';
 export * from './historicoRutaDtoPaginatedData';
 export * from './historicoRutaDtoPaginatedDataDataResponse';
+export * from './initialRoutePrioritizationRequest';
 export * from './int32ReferenceDto';
 export * from './int32ReferenceDtoIEnumerableDataResponse';
 export * from './lineasProduccionDto';
@@ -42,6 +43,8 @@ export * from './planeacionProduccionDtoDataResponse';
 export * from './planeacionProduccionDtoIEnumerableDataResponse';
 export * from './prediccionesRutasDto';
 export * from './prediccionesRutasDtoIEnumerableDataResponse';
+export * from './productRoutePrioritizationDto';
+export * from './productRoutePrioritizationDtoIEnumerableDataResponse';
 export * from './productoDto';
 export * from './productoDtoDataResponse';
 export * from './productoDtoIEnumerableDataResponse';
