# src/app/core/services/model/productRoutePrioritizationDto.ts
@@ -1,0 +1,29 @@
+/**
+ * Mi API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface ProductRoutePrioritizationDto { 
+    idProducto?: string | null;
+    nombreProducto?: string | null;
+    ejecucion?: number;
+    idFamilia?: number;
+    nombreFamilia?: string | null;
+    idRuta?: number;
+    nombreRuta?: string | null;
+    idMaquina?: string | null;
+    nombreMaquina?: string | null;
+    operacion?: string | null;
+    volumenProducir?: number;
+    semana?: string | null;
+    restriccionesMaquina?: Array<string> | null;
+    restriccionesLavado?: Array<string> | null;
+    restriccionRuta?: string | null;
+}
+
