# src/app/features/general/route-planification-priorization/route-planification-priorization.component.ts
@@ -1,4 +1,7 @@
 import { Component } from '@angular/core';
+import { PriorizacionRutasService, ProductRoutePrioritizationDto } from 'src/app/core/services';
+import { PrioritizationService } from 'src/app/core/services/prioritization.service';
+import Swal from 'sweetalert2';
 
 @Component({
   selector: 'app-route-planification-priorization',
@@ -7,77 +10,60 @@ import { Component } from '@angular/core';
 })
 export class RoutePlanificationPriorizationComponent {
   currentPage = 1;
-  totalPages = 5;
-  pages = Array(this.totalPages).fill(0);
+  totalPages = 1;
+  itemsPerPage = 10;
+  private offsetPagesToDisplay = 5;
+  pages: number[] = [];
 
-  washRestrictions = [
-    {
-      id: 1,
-      code: 'PRDCT1',
-      description: 'Esta es la descripción del equipo',
-      status: 'OK',
-      requestDate: new Date('2023-07-06'),
-      equipmentList: ['EC1', 'EC4', 'EC2'],
-      restrictionList: ['RC1', 'RC5'],
-      routeUsage: '10',
-    },
-    {
-      id: 2,
-      code: 'PRDCT2',
-      description: 'Esta es la descripción del equipo',
-      status: 'OK',
-      requestDate: new Date('2023-07-06'),
-      equipmentList: ['EC1'],
-      restrictionList: ['RC1', 'RC2', 'RC3'],
-      routeUsage: '2',
-    },
-    {
-      id: 3,
-      code: 'PRDCT3',
-      description: 'Esta es la descripción del equipo',
-      status: 'OK',
-      requestDate: new Date('2023-07-06'),
-      equipmentList: ['EC3', 'EC4'],
-      restrictionList: ['RC2', 'RC8', 'RC10'],
-      routeUsage: '5',
-    },
-    {
-      id: 4,
-      code: 'PRDCT4',
-      description: 'Esta es la descripción del equipo',
-      status: 'OK',
-      requestDate: new Date('2023-07-06'),
-      equipmentList: ['EC1'],
-      restrictionList: ['RC1'],
-      routeUsage: '9',
-    },
-    {
-      id: 5,
-      code: 'PRDCT5',
-      description: 'Esta es la descripción del equipo',
-      status: 'OFF',
-      requestDate: new Date('2023-07-06'),
-      equipmentList: ['EC1', 'EC2', 'EC3'],
-      restrictionList: ['RC1', 'RC2', 'RC3'],
-      routeUsage: '8',
-    },
-  ]
+  data: ProductRoutePrioritizationDto[] = [];
 
-  constructor() {
+  constructor(
+    private prioritizationService: PrioritizationService,
+    private priorizacionRutas: PriorizacionRutasService,
+  ) {
    }
 
   ngOnInit(): void {
+    this.getData();
   }
 
-  getStatusStyle(status: string): string[] {
-    switch (status) {
-      case 'OK': return ['border-success', 'text-success', 'bg-success-subtle'];
-      case 'OFF': return ['border-danger', ' text-danger', 'bg-danger-subtle'];
-      default: return [];
-    }
+  getData(): void {
+    const request = this.prioritizationService.getInitialRequestToPrioritizeRoutes();
+    this.priorizacionRutas.apiPriorizacionRutasPost(request)
+      .subscribe(response => {
+        if (response.datos) {
+          this.data = response.datos ?? [];
+          this.totalPages = Math.ceil(this.data.length / this.itemsPerPage);
+          this.updatePagination();
+        }
+      }, error => {
+        if (error.status === 400) {
+          Swal.fire({
+            title: 'Error',
+            text: error.error,
+            icon: 'error',
+          });
+        } else {
+          Swal.fire({
+            title: 'Error',
+            text: 'Un error inesperado ha ocurrido al intentar priorizar las rutas',
+            icon: 'error',
+          });
+        }
+      });
   }
 
   changePage(pageToLoad: number): void {
     this.currentPage = pageToLoad;
+  }
+
+  updatePagination(): void {
+    this.pages = [];
+    const initialPage = Math.max(1, this.currentPage - this.offsetPagesToDisplay);
+    const negativeOffset = this.currentPage - this.offsetPagesToDisplay < 0 ? this.currentPage - this.offsetPagesToDisplay : 0;
+    const finalPage = Math.min(this.totalPages, this.currentPage + this.offsetPagesToDisplay - negativeOffset);
+    for (let i = initialPage; i <= finalPage; i++) {
+      this.pages.push(i);
+    }
   }
 }
