# swagger.json
@@ -1819,6 +1819,74 @@
         }
       }
     },
+    "/api/PriorizacionRutas": {
+      "post": {
+        "tags": [
+          "PriorizacionRutas"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/InitialRoutePrioritizationRequest"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/InitialRoutePrioritizationRequest"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/InitialRoutePrioritizationRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductRoutePrioritizationDtoIEnumerableDataResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductRoutePrioritizationDtoIEnumerableDataResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductRoutePrioritizationDtoIEnumerableDataResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Productos/buscar/todos": {
       "get": {
         "tags": [
@@ -6044,6 +6112,24 @@
         },
         "additionalProperties": false
       },
+      "InitialRoutePrioritizationRequest": {
+        "type": "object",
+        "properties": {
+          "semana": {
+            "type": "string",
+            "nullable": true
+          },
+          "familyIds": {
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "Int32ReferenceDto": {
         "type": "object",
         "properties": {
@@ -6340,6 +6426,95 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/PrediccionesRutasDto"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ProductRoutePrioritizationDto": {
+        "type": "object",
+        "properties": {
+          "idProducto": {
+            "type": "string",
+            "nullable": true
+          },
+          "nombreProducto": {
+            "type": "string",
+            "nullable": true
+          },
+          "ejecucion": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "idFamilia": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "nombreFamilia": {
+            "type": "string",
+            "nullable": true
+          },
+          "idRuta": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "nombreRuta": {
+            "type": "string",
+            "nullable": true
+          },
+          "idMaquina": {
+            "type": "string",
+            "nullable": true
+          },
+          "nombreMaquina": {
+            "type": "string",
+            "nullable": true
+          },
+          "operacion": {
+            "type": "string",
+            "nullable": true
+          },
+          "volumenProducir": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "semana": {
+            "type": "string",
+            "nullable": true
+          },
+          "restriccionesMaquina": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
+          },
+          "restriccionesLavado": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
+          },
+          "restriccionRuta": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ProductRoutePrioritizationDtoIEnumerableDataResponse": {
+        "type": "object",
+        "properties": {
+          "exito": {
+            "type": "string",
+            "nullable": true
+          },
+          "datos": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ProductRoutePrioritizationDto"
             },
             "nullable": true
           }
